adjustments to HTML

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 231 - Web Frontend Development I - Savanah Santos</title>
-    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD231 - Web Frontend Development I
-    class for the Course Home Page Assingment.">
+    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD231 Web Frontend Development I Course Home Page Assingment.">
+    <meta name="author" content="Savanah Santos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Sofia&display=swap" rel="stylesheet">
-    
-    <meta name="author" content="Savanah Santos">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -28,6 +26,7 @@
         <ul>
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Chamber</a></li>
+            <li><a href="#">Contact-Us</a></li>
             <li><a href="#">Final</a></li>
         </ul>
     </nav>
