adjusted img width and height

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="student-photo">
             <h2>Student Photo</h2>
-            <img src="images/me-anniversery.jpg" alt="me" width="100%" height="auto" loading="lazy">
+            <img src="images/me-anniversery.jpg" alt="me" width="100" height="100" loading="lazy">
         </section>
         </div>
         <section class="courses">
