directory initial commit

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>WDD 231 - Web Frontend Development I - Savanah Santos</title>
     <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD231 Web Frontend Development I Course Home Page Assingment.">
     <meta name="author" content="Savanah Santos">
+    <meta property="og:title" content="Home Page">
+    <meta property="og:description" content="Ths page is for Savanah Santos/  WDD 231 class, Web Frontend Development I, in order to learn how to do Social Media Meta.">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Sofia&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
