facebook meta tags

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,9 +9,9 @@
 
     <meta property="og:title" content="Facebook">
     <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/directory.html/images/facebook.svg">
     <meta property="og:url" content="https://www.facebook.com">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
