facebook meta image change

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,10 +7,10 @@
     <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class to create the Chamber Directory Page.">
     <meta name="author" content="Savanah Santos">
 
-    <meta property="og:title" content="Facebook">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/directory.html/images/facebook.svg">
-    <meta property="og:url" content="https://www.facebook.com">
+    <meta property="og:title" content="Chamber Directory | WDD 231 - Savanah Santos">
+    <meta property="og:description" content="A directory of chamber members created for WDD 231 - Web Frontend Development I by Savanah Santos.">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/facebook-square-logo.png">
+    <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/directory.html">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
