--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,7 +11,8 @@
     <meta property="og:description" content="A directory of chamber members created for WDD 231 - Web Frontend Development I by Savanah Santos.">
     <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/facebook-square-logo.png">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/directory.html">
-
+    <meta property="og:type" content="website">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
