--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,9 +34,12 @@
             <li><a href="#">Discover</a></li>
         </ul>
     </nav>
+
+    <main></main>
+    <h1>Member Directory</h1>
     <footer>
         <div class="chamber-info">
-            
+
         </div>
     </footer>
 </body>
