--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/chamber.css">
     <link rel="stylesheet" href="styles/chamber-large.css">
     <link rel="icon" href="chamber-favicon.ico">
-    <script src="scripts/directory.js" defer></script>
+    <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
     <header>
