--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
     <header>
         <div class="logo-title">
             <img src="images/" alt="chamber" width="45" height="45">
-            <span>Cedar City Chamber of Commerce</span>
+            <span><strong>City Chamber of Commerce</strong></span>
         </div>
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
         <nav id="nav-bar" class="navigation">
