--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="logo-title">
-            <img src="images/logo.png" alt="chamber" width="25" height="25">
+            <img src="images/logo.jpg" alt="chamber" width="25" height="25">
             <span><strong>City Chamber of Commerce</strong></span>
         </div>
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
