--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="styles/chamber-large.css">
     <link rel="icon" href="chamber-favicon.ico">
     <script src="scripts/chamber.js" defer></script>
+    <script src="scripts/date.js" defer></script>
+    <script src="scripts/navigation.js" defer></script>
 </head>
 <body>
     <header>
@@ -32,7 +34,7 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html" class="current">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
