--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,6 +42,11 @@
     </header>
     <main>
         <h1>Member Directory</h1>
+        <div class="view-toggle">
+            <button id="grid-view">Grid View</button>
+            <button id="list-view">List View</button>
+        </div>
+        <div id="cards"></div>
     </main>
     <footer>
         <div class="footer-container">
