had to add </p>

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -63,7 +63,7 @@
             </div>
             <div class="copyright">
                 <p>&copy;<span id="currentyear"></span>💕Savanah Santos💕 Utah USA</p>
-                <p class="modified">Last modified: <span id="lastmodified"></span>
+                <p class="modified">Last modified: <span id="lastmodified"></span></p>
             </div>
         </div>
     </footer>
