added lazy loading

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -56,10 +56,10 @@
                 <p>(435)123-4567</p>
             </div>
             <div class="social">
-                <a href="https://www.linkedin.com/"><img src="images/linkedin.svg" alt="Linkedin" width="45" height="45"></a>
-                <a href="https://github.com/"><img src="images/github.svg" alt="Github" width="45" height="45"></a>
-                <a href="https://www.facebook.com/savanah.bryant"><img src="images/facebook.svg" alt="Facebook" width="45" height="45"></a>
-                <a href="https://www.instagram.com/savanahbryant50/"><img src="images/instagram.svg" alt="Instagram" width="45" height="45"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin.svg" alt="Linkedin" width="45" height="45" loading="lazy"></a>
+                <a href="https://github.com/"><img src="images/github.svg" alt="Github" width="45" height="45" loading="lazy"></a>
+                <a href="https://www.facebook.com/savanah.bryant"><img src="images/facebook.svg" alt="Facebook" width="45" height="45" loading="lazy"></a>
+                <a href="https://www.instagram.com/savanahbryant50/"><img src="images/instagram.svg" alt="Instagram" width="45" height="45" loading="lazy"></a>
             </div>
             <div class="copyright">
                 <p>&copy;<span id="currentyear"></span>💕Savanah Santos💕 Utah USA</p>
