--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="logo-title">
-            <img src="images/logo.png" alt="chamber" width="95" height="95">
+            <img src="images/logo.png" alt="chamber" width="95" height="95" loading="lazy">
             <span><strong>City Chamber of Commerce</strong></span>
         </div>
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
