--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,7 +46,7 @@
             <button id="grid-view">Grid View</button>
             <button id="list-view">List View</button>
         </div>
-        <div id="cards"></div>
+        <div id="cards" class="grid"></div>
     </main>
     <footer>
         <div class="footer-container">
