--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,7 +33,7 @@
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html" class="current">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
