--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,6 +21,9 @@
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/events.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
+    <script src="scripts/company.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,15 +34,29 @@
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="directory.html" class="current">Directory</a></li>
+                <li><a href="index.html" class="current">Home</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Welcome to the Cedar City Chamber of Commerce Home Page!</h1>
+        <section class="hero">
+            <img src="images/cedar-hero.jpg" alt="hero" class="hero-image">
+            <h1>Cedar City Chamber of Commerce</h1>
+            <div class="hero-text">
+                <p><a href="#" class="join-us">Join</a> us today!</p>
+            </div>
+        </section>
+        <section class="current-events">
+        </section>
+        <p>The current temperature in Cedar City, UT is <span id="current-temp"></span></p>
+        <figure>
+            <img id="weather-icon" src="" alt="">
+            <figcaption></figcaption>
+        </figure>
+        <section class="company-spotlights"></section>
     </main>
     <footer>
         <div class="footer-container">
