adjustments to html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,13 +50,16 @@
             </div>
         </section>
         <section class="current-events">
+            <h2>Current Events</h2>
         </section>
         <p>The current temperature in Cedar City, UT is <span id="current-temp"></span></p>
         <figure>
             <img id="weather-icon" src="" alt="">
             <figcaption></figcaption>
         </figure>
-        <section class="company-spotlights"></section>
+        <section class="company-spotlights">
+            <h2>Company Spotlights</h2>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
