--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
         </section>
         <p>The current temperature in Cedar City, UT is <span id="current-temp"></span></p>
         <figure>
-            <img id="weather-icon" alt="">
+            <img id="weather-icon" src="" alt="Weather Icon">
             <figcaption></figcaption>
         </figure>
         <section class="company-spotlights">
