--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Savanah Santos">
 
     <meta property="og:title" content="Welcome to the Chamber of Commerce Home page">
-    <meta property="og:description" content="A page to welcome members to the home page.">
+    <meta property="og:description" content="Welcome to our Chamber of Vommerce home page! Explore important updates, events, and resources designed to support our members and foster community connections. Stay informed, get involved, and discover the latest news and opportunities tailored for our valued members.">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/index.html">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
