--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Welcome to the Chamber of Commerce Home page">
     <meta property="og:description" content="Welcome to our Chamber of Vommerce home page! Explore important updates, events, and resources designed to support our members and foster community connections. Stay informed, get involved, and discover the latest news and opportunities tailored for our valued members.">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="images/cedar-hero.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
