fixed spelling error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
         </section>
         <p>The current temperature in Cedar City, UT is <span id="current-temp"></span></p>
         <figure>
-            <img id="weather-icon" src="images/placehollder.png" alt="Weather Icon">
+            <img id="weather-icon" src="images/placeholder.png" alt="Weather Icon">
             <figcaption></figcaption>
         </figure>
         <section class="company-spotlights">
