--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Savanah Santos">
 
     <meta property="og:title" content="Welcome to the Chamber of Commerce Home page">
-    <meta property="og:description" content="Welcome to our Chamber of Vommerce home page! Explore important updates, events, and resources that support members, foster connections, and strengthen our community.">
+    <meta property="og:description" content="Welcome to our Chamber of Commerce home page! Explore important events, and resources that support members, foster connections, and strengthen our community.">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/index.html">
     <meta property="og:image" content="images/cedar-hero.jpg">
 
