--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Welcome to the Chamber of Commerce Home page">
     <meta property="og:description" content="Welcome to our Chamber of Commerce home page! Explore important events, and resources that support members, foster connections, and strengthen our community.">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/index.html">
-    <meta property="og:image" content="images/cedar-hero.jpg">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/cedar-hero.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
