--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
         </section>
         <p>The current temperature in Cedar City, UT is <span id="current-temp"></span></p>
         <figure>
-            <img id="weather-icon" data-src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" width="100" height="100" loading="lazy">
+            <img id="weather-icon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" width="100" height="100" loading="lazy">
             <figcaption></figcaption>
         </figure>
         <section class="company-spotlights">
