had to adjust page set up

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,6 +25,7 @@
     <script src="scripts/events.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/company.js" defer></script>
+    <script src="scripts/member.js" defer></script>
 </head>
 <body>
     <header>
@@ -75,8 +76,8 @@
                 <div id="forecast"></div>
             </section>
         </section>
-        <section class="company-spotlights">
-            <div class="spotlights-container"></div>
+        <section class="company-spotlight">
+            <div class="spotlight-container"></div>
         </section>
     </main>
 
