--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav id="nav-bar" class="navigation">
         <ul>
             <li class="current"><a href="#">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="#">Contact-Us</a></li>
             <li><a href="#">Final</a></li>
         </ul>
@@ -57,6 +57,7 @@
             <div class="course-list"></div>
             <p class="credit-total"></p>
         </section>
+        <dialog id="course-details"></dialog>
     </main>
     <footer>
         <div class="social">
