fixed a few code mistakes

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,7 +52,7 @@
                         <input type="text" id="first" name="first" autocomplete="given-name" required title="Enter your first name: "></label>
                     <label for="last">Last name:*
                         <input type="text" id="last" name="last" autocomplete="family-name" required title="Enter your last name: "></label>
-                    <label for="organization">Organizational Title:*  
+                    <label for="orgTitle">Organizational Title:*  
                         <input type="text" id="orgTitle" name="orgTitle" title="Enter your Organizational title: " autocomplete="organization-title" pattern="^[A-Za-z\- ]{7,}$" required></label>
                     <label for="email">Email:*  
                         <input type="email" id="email" name="email" autocomplete="email" title="Enter your email: " placeholder="someone123@gmail.com" required></label>
@@ -98,3 +98,4 @@
         </div>
     </footer>
 </body>
+</html>
