--- a/chamber/join.html
+++ b/chamber/join.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Savanah Santos">
 
     <meta property="og:title" content="Welcome to the Chamber of Commerce Join Us page">
-    <meta property="og:description" content="Welcome to our Chamber of Commerce join us page! Come join us as we explore important events, and resources that support members, foster connections, and strengthen our community.">
+    <meta property="og:description" content="join our Chamber of Commerse to access business resources, connect with local members, and grow within a supportive community!">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/join.html">
     <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/cedar-hero.jpg">
 
