--- a/chamber/join.html
+++ b/chamber/join.html
@@ -44,6 +44,7 @@
         </nav>
     </header>
     <main>
+        <h1>Come Join us!</h1>
         <div class="main-layout">
             <form method="get" action="thankyou.html" class="conf">
                 <fieldset>
