--- a/chamber/join.html
+++ b/chamber/join.html
@@ -26,6 +26,7 @@
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/company.js" defer></script>
     <script src="scripts/membership-level.js" defer></script>
+    <script src="scripts/timestamp.js" defer></script>
 </head>
 <body>
     <header>
