--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber Directory Page | WDD 231 - Web Frontend Development I | Savanah Santos</title>
-    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class to create the Chamber Directory Page.">
+    <title>Thank You | WDD 231 - Web Frontend Development I | Savanah Santos</title>
+    <meta name="description" content="This page is the thank you page for the chamber of commerce assignment done in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class.">
     <meta name="author" content="Savanah Santos">
-
-    <meta property="og:title" content="Chamber Directory | WDD 231 - Savanah Santos">
-    <meta property="og:description" content="A directory of chamber members created for WDD 231 - Web Frontend Development I by Savanah Santos.">
-    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/facebook-square-logo.png">
-    <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/directory.html">
-    <meta property="og:type" content="website">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +14,10 @@
     <link rel="stylesheet" href="styles/chamber.css">
     <link rel="stylesheet" href="styles/chamber-large.css">
     <link rel="icon" href="chamber-favicon.ico">
-    <script src="scripts/chamber.js" defer></script>
+
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/thankyou.js" defer></script>
 </head>
 <body>
     <header>
@@ -34,19 +29,26 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="current">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html" class="current">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Member Directory</h1>
-        <div class="view-toggle">
-            <button id="grid-view">Grid View</button>
-            <button id="list-view">List View</button>
-        </div>
-        <div id="cards" class="grid"></div>
+    <main class="thankyou-container">
+        <h1>Welcome!</h1>
+        <p>We're excited to welcome you to the Cedar City Chamber of Commerce!</p>
+
+        <section class="thankyou-card">
+            <h2>Submission Details</h2>
+
+            <p><strong>First Name: <span id="first"></span></strong></p>
+            <p><strong>Last Name: <span id="last"></span></strong></p>
+            <p><strong>Email: <span id="email"></span></strong></p>
+            <p><strong>Phone: <span id="number"></span></strong></p>
+            <p><strong>Business: <span id="businessName"></span></strong></p>
+            <p><strong>Submitted on: <span id="timestamp"></span></strong></p>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
