fixed typos, adjusted colors

--- a/week06/siteplan.html
+++ b/week06/siteplan.html
@@ -32,7 +32,7 @@
         <div class="scenarios">
             <ul>
                 <li>What events are coming up that Tacos Bravo will be attending?</li>
-                <li>What are the spectials for this month?</li>
+                <li>What are the specials for this month?</li>
                 <li>How can I book Tacos Bravo for a private event I have coming up?</li>
                 <li>Can I make an online order?</li>
                 <li>When we aren't at an event, where will we be?</li>
@@ -55,7 +55,7 @@
                     <li>Buttons</li>
                     <li>Navigation hover states</li>
                 <h3>#CE412D</h3>
-                    <li>Primary brand coor on site</li>
+                    <li>Primary brand color on site</li>
                     <li>Large section background (ex: "Order now", "Our Story" section)</li>
                     <li>Header or footer background (paired with white text)</li>
                 <h3>#BF4834</h3>
@@ -64,7 +64,7 @@
                     <li>Borders, dividers, or subtle background shading.</li>
                     <li>Hover effects on red buttons (darkens nicely)</li>
                 <h3>#F25259</h3>
-                    <li>Highlight elements (badges likke "New!", "Chef's Favorite!", "Specials", etc.)</li>
+                    <li>Highlight elements (badges like "New!", "Chef's Favorite!", "Specials", etc.)</li>
                     <li>Accent buttons</li>
                     <li>Icons or playful elements to add personality</li>
                     <li>Small section backgrounds</li>
@@ -72,7 +72,8 @@
             </div>
         </section>
         <section>
-        <div class="type">Typography</div>
+        <div class="type">
+            <h2>Typography</h2>
             <h3>Almendra Display
             Static</h3>
                 <li>Logo text</li>
@@ -87,6 +88,7 @@
                 <li>Forms</li>
                 <li>Footer text</li>
                 <li>Long paragraphs & descriptions</li>
+                </div>
             </section>
             <section>
                 <h3><a href="https://app.moqups.com/AU3GPo8NPr3tqKggSSj8TYIhoAicYpBG/view/page/ad64222d5" target="blank">WireFrame</h3></a>
