fixed social media links

--- a/week06/siteplan.html
+++ b/week06/siteplan.html
@@ -96,8 +96,8 @@
     </div>
     <footer>
         <div class="social">
-            <a href="https://www.facebook.com/savanah.bryant"><img src="images/facebook.svg" alt="Facebook" width="45" height="45"></a>
-            <a href="https://www.instagram.com/savanahbryant50/"><img src="images/instagram.svg" alt="Instagram" width="45" height="45"></a>
+            <a href="https://www.facebook.com/profile.php?id=100087805961264"><img src="images/facebook.svg" alt="Facebook" width="45" height="45"></a>
+            <a href="https://www.instagram.com/tacosbravo22/"><img src="images/instagram.svg" alt="Instagram" width="45" height="45"></a>
         </div>
         <div class="copyright">
             <p class="copyright">&copy;<span id="currentyear"></span>💕Savanah Santos💕 Utah USA</p>
