adjustments on the directory page cards, and initial commit for discover page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 231 - Web Frontend Development I - Savanah Santos</title>
-    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD231 Web Frontend Development I Course Home Page Assingment.">
+    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD231 Web Frontend Development I Course Discover page of the chamber of commerce Assingment.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
-    <meta property="og:description" content="Ths page is for Savanah Santos/  WDD 231 class, Web Frontend Development I, in order to learn how to do Social Media Meta.">
+    <meta property="og:description" content="Uncover the businesses, events, and experiences that shape our vibrant community and support local growth.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,6 @@
         <ul>
             <li class="current"><a href="#">Home</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
-            <li><a href="#">Contact-Us</a></li>
             <li><a href="#">Final</a></li>
         </ul>
     </nav>
