--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber Directory Page | WDD 231 - Web Frontend Development I | Savanah Santos</title>
-    <meta name="description" content="This page was created in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class to create the Chamber Directory Page.">
+    <title>Chamber Home Page | WDD 231 - Web Frontend Development I | Savanah Santos</title>
+    <meta name="description" content="This page is the home page for the chamber of commerce assignment done in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class.">
     <meta name="author" content="Savanah Santos">
 
-    <meta property="og:title" content="Chamber Directory | WDD 231 - Savanah Santos">
-    <meta property="og:description" content="A directory of chamber members created for WDD 231 - Web Frontend Development I by Savanah Santos.">
-    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/facebook-square-logo.png">
-    <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/directory.html">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Welcome to the Chamber of Commerce Home page">
+    <meta property="og:description" content="Welcome to our Chamber of Commerce home page! Explore important events, and resources that support members, foster connections, and strengthen our community.">
+    <meta property="og:url" content="https://savvysantos.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/chamber/images/cedar-hero.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +22,10 @@
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/events.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
+    <script src="scripts/company.js" defer></script>
+    <script src="scripts/interest.js" defer></script>
 </head>
 <body>
     <header>
@@ -34,19 +37,15 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="current">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a href="discover.html" class="current">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Member Directory</h1>
-        <div class="view-toggle">
-            <button id="grid-view">Grid View</button>
-            <button id="list-view">List View</button>
-        </div>
-        <div id="cards" class="grid"></div>
+        <h1>Discover</h1>
+        <div id="interest-cards"></div>
     </main>
     <footer>
         <div class="footer-container">
@@ -68,4 +67,3 @@
         </div>
     </footer>
 </body>
-</html>
