--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
                 <li><a href="index.html" class="current">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -47,7 +47,7 @@
             <img src="images/cedar-hero.jpg" alt="hero" class="hero-image">
             <h1>Cedar City Chamber of Commerce</h1>
             <div class="hero-text">
-                <p><a href="#" class="join-us">Join</a> us today!</p>
+                <p><a href="join.html" class="join-us">Join</a> us today!</p>
             </div>
         </section>
 
