added missing </html> and gave a different title

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber Home Page | WDD 231 - Web Frontend Development I | Savanah Santos</title>
+    <title>Discover Cedar City</title>
     <meta name="description" content="This page is the home page for the chamber of commerce assignment done in 2025 by Savanah Santos for her WDD 231 - Web Frontend Development I class.">
     <meta name="author" content="Savanah Santos">
 
@@ -67,3 +67,4 @@
         </div>
     </footer>
 </body>
+</html>
