--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wdth,wght@0,5..1200,112.5,300..900;1,5..1200,112.5,300..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/chamber.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/chamber-large.css">
     <link rel="icon" href="chamber-favicon.ico">
     <script src="scripts/chamber.js" defer></script>
@@ -25,7 +26,8 @@
     <script src="scripts/events.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/company.js" defer></script>
-    <script src="scripts/interest.js" defer></script>
+    <script src="scripts/interest.js" type="module" defer></script>
+    <script src="scripts/visit-message.js" defer></script>
 </head>
 <body>
     <header>
@@ -45,7 +47,8 @@
     </header>
     <main>
         <h1>Discover</h1>
-        <div id="interest-cards"></div>
+        <div id="visit-message" class="visit-message"></div>
+        <div id="interest-cards" class="interest-cards"></div>
     </main>
     <footer>
         <div class="footer-container">
