--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
     <script src="scripts/events.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/company.js" defer></script>
-    <script src="scripts/interest.js" type="module" defer></script>
+    <script src="scripts/interest.js" type="module" ></script>
     <script src="scripts/visit-message.js" defer></script>
 </head>
 <body>
