initial commit for final project

--- a/week06/siteplan.html
+++ b/week06/siteplan.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <img src="images/tacos-logo.jpeg"width="150" height="150"  alt="tacos-logo">
+        <img src="images/tacos-bravo-transparent.png" width="350" height="350"  alt="tacos-logo">
         <h1>Site Name (Tacos Bravo)</h1>
     </header>
     <div class="body-text">
