--- a/final/index.html
+++ b/final/index.html
@@ -58,11 +58,11 @@
                 <section class="monthly-events">
                     <h2>Our months events!<h2>                    
                 </section>
-                <section class="current-weather">
+                <section class="current-weather-container">
                     <h2>Weather Forcast</h2>
                     <div class="weather-box">
                         <h3>Current Weather | Cedar City, Utah</h3>
-                        <img id="weather-icon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" width="100" height="100" loading="lazy">
+                        <img id="weather-icon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" loading="lazy">
                         <div class="weather-info">
                             <p class="current-temp">Current Temperature: </p>
                             <p id="weather-desc"></p>
@@ -72,7 +72,7 @@
                             <p>Sunrise: <span id="sunrise"></span></p>
                             <p>Sunset: <span id="sunset"></span></p>
                             <section id="weather-forecast">
-                                <div id="forecast">
+                                <div id="forecast-container">
                                     <h3>7-Day Weather Forecast</h3>
                                     <img id="weather-icon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" width="100" height="100" loading="lazy">
                                     <div id="forecast"></div>
