--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <img src="images/emoji-smile.svg" alt="Site Logo" width="45" height="45">
+        <img src="images/emoji-smile.svg" alt="Site Logo">
         <span>Savanah Santos</span>
         <button id="ham-button" class="hamburger"></button>
     </header>
