adjusted how html calls the other files

--- a/final/index.html
+++ b/final/index.html
@@ -15,9 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Almendra+Display&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/final.css">
-    <link rel="stylesheet" href="styles/final-medium.css">
-    <link rel="stylesheet" href="styles/final-large.css">
+    <link rel="stylesheet" href="./styles/final.css">
+    <link rel="stylesheet" href="./styles/final-medium.css">
+    <link rel="stylesheet" href="./styles/final-large.css">
 
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
@@ -37,8 +37,8 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="#" class="current">Home</a></li>
-                <li><a href="final/menu.html">Menu</a></li>
-                <li><a href="final/content-us.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="content-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
