trying to figure out why github is making everything a lot bigger

--- a/final/index.html
+++ b/final/index.html
@@ -56,7 +56,7 @@
             </section>
             <section class="home-sections">
                 <section class="monthly-events">
-                    <h2>Our months events!<h2>                    
+                    <h2>Our months events!</h2>         
                 </section>
                 <section class="current-weather-container">
                     <h2>Weather Forcast</h2>
