--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/tacos-bravo-transparent.webp" alt="Tacos Bravo Logo" width="350" height="350" loading="lazy">
+            <img src="images/tacos-bravo-transparent.webp" alt="Tacos Bravo Logo" loading="lazy">
         </div>
         <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
         <nav id="nav-bar" class="navigation">
