--- a/final/index.html
+++ b/final/index.html
@@ -36,7 +36,7 @@
     <header>
         <div class="header-top">
             <div class="logo">
-                <img src="images/tacos-bravo-transparent.webp" alt="Tacos Bravo Logo" loading="lazy">
+                <img src="images/tacos-bravo-transparent.webp" alt="Tacos Bravo Logo" loading="lazy" height="50" width="50">
             </div>
             <button id="ham-button" class="hamburger" aria-label="Toggle navigation menu"></button>
             <nav id="nav-bar" class="navigation">
