--- a/final/menu.html
+++ b/final/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tacos Bravo | Home</title>
+    <title>Tacos Bravo | Menu</title>
     <meta name="description" content="This page was originally created in 2025 by Savanah Santos as her final project in her WDD231 Web Frontend Development I course. The page is for her business, Tacos Bravo.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
