adjusted phone number again

--- a/final/menu.html
+++ b/final/menu.html
@@ -56,7 +56,7 @@
             <div class="contact-info">
                 <p>Tacos Bravo</p>
                 <p>Hugo Santos: (405)590-5701</p>
-                <p>Savanah Santos(405)215-8382</p>
+                <p>Savanah Santos: (405)215-8382</p>
             </div>
             
             <div class="social">
