--- a/final/menu.html
+++ b/final/menu.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html" class="current">Menu</a></li>
-                    <li><a href="content-us.html">Contact Us</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
