--- a/final/index.html
+++ b/final/index.html
@@ -43,7 +43,7 @@
                 <ul>
                     <li><a href="#" class="current">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="content-us.html">Contact Us</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
