added missing end tags

--- a/final/index.html
+++ b/final/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+    <main>
     <header>
         <div class="header-top">
             <div class="logo">
@@ -59,6 +60,7 @@
                 </p>
             </div>
         </section>
+        </div>
             <section class="home-sections">
 
                 <section class="weekly-locations">
