added images to folder

--- a/final/index.html
+++ b/final/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos Bravo | Home</title>
-    <meta name="description" content="This page was originally created in 2025 by Savanah Santos as her final project in her WDD231 Web Frontend Development I course. The page is for her business, Tacos Bravo.">
+    <meta name="description" content="Tacos Bravo website, created in 2025 by Savanah Santos as her final WDD231 Web Frontend Development I project.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:description" content="Craving authentic tacos? Discover Tacos Bravo, crafted with love by Savanah Santos in 2025 as her Web Dev final project!">
+    <meta property="og:image" content="images/">
     <meta property="og:url" content="">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
