added url to og

--- a/final/index.html
+++ b/final/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
     <meta property="og:description" content="Craving authentic tacos? Discover Tacos Bravo, crafted with love by Savanah Santos in 2025 as her Web Dev final project!">
-    <meta property="og:image" content="https://raw.githubusercontent.com/SavvySantos/wdd231/main/final/tacos-quesabirrias-1.jpg">
-    <meta property="og:url" content="https://savvysantos.github.io/wdd231/final/tacos-quesabirrias-1.jpg">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/final/tacos-quesabirrias-1.jpg">
+    <meta property="og:url" content="https://savvysantos.github.io/wdd231/final/index.html">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
