--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos Bravo | Contact Us</title>
-    <meta name="description" content="This page was originally created in 2025 by Savanah Santos as her final project in her WDD231 Web Frontend Development I course. The page is for her business, Tacos Bravo.">
+    <meta name="description" content="Tacos Bravo's website, created in 2025 by Savanah Santos as her WDD231 final project. This is her Contact Us page.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
     <meta property="og:description" content="">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/final/tacos-quesabirrias-1.jpg">
+    <meta property="og:url" content="https://savvysantos.github.io/wdd231/final/contact-us.html">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
