--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tacos Bravo's website, created in 2025 by Savanah Santos as her WDD231 final project. This is her Contact Us page.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Tacos Bravo showcases delicious Mexican street food and was crafted by Savanah Santos in 2025 as her WDD231 final project">
     <meta property="og:image" content="https://savvysantos.github.io/wdd231/final/tacos-quesabirrias-1.jpg">
     <meta property="og:url" content="https://savvysantos.github.io/wdd231/final/contact-us.html">
 
