--- a/final/menu.html
+++ b/final/menu.html
@@ -7,9 +7,9 @@
     <meta name="description" content="This page was originally created in 2025 by Savanah Santos as her final project in her WDD231 Web Frontend Development I course. The page is for her business, Tacos Bravo.">
     <meta name="author" content="Savanah Santos">
     <meta property="og:title" content="Home Page">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
+    <meta property="og:description" content="Explore the Tacos Bravo menu featuring street tacos, quesabirrias, nachos, and refreshing drinks made fresh for every order.">
+    <meta property="og:image" content="https://savvysantos.github.io/wdd231/final/tacos-quesabirrias-1.jpg">
+    <meta property="og:url" content="https://savvysantos.github.io/wdd231/final/menu.html">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
