--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -81,6 +81,7 @@
                     <input type="hidden" id="timestamp" name="timestamp">
                 </fieldset>
                 <input type="submit" value="Contact Tacos Bravo!">
+                <input type="hidden" action="thankyou.html" class="conf" id="contactForm">
             </form>
             <div class="level-buttons"></div>
             <dialog id="level-details"></dialog>
