fixed js for thank you page

--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -50,7 +50,7 @@
         <h1>Contact us for your next event!</h1>
         <div class="contact-us-container">
         <div class="main-layout">
-            <form method="get" action="thankyou.html" class="conf">
+            <form id="contactForm" method="get" action="thankyou.html" class="conf">
                 <fieldset>
                     <legend>Customer Information</legend>
                     <label for="first">First name:*
@@ -81,7 +81,6 @@
                     <input type="hidden" id="timestamp" name="timestamp">
                 </fieldset>
                 <input type="submit" value="Contact Tacos Bravo!">
-                <input type="hidden" action="thankyou.html" class="conf" id="contactForm">
             </form>
             <div class="level-buttons"></div>
             <dialog id="level-details"></dialog>
