--- a/final/contact-us.html
+++ b/final/contact-us.html
@@ -23,6 +23,7 @@
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/location.js" defer></script>
     <script src="scripts/menu.js" defer></script>
+    <script src="scripts/timestamp.js" defer></script>
 
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
